Add built-in request policy engine
